move contactAPI to separate file

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Local Storage</title>
     <link rel="stylesheet" href="index.css">
-    
+
   </head>
 
   <body >
@@ -15,18 +15,19 @@
  </form>
  <br>
 <table border="1" id="mytable">
-  <tr> 
+  <tr>
    <th ><strong>Name</strong></th>
     <th colspan="3"><strong>Contact</strong></th>
     <th ><strong>Note</strong></th>
 
   </tr>
-  
-</table>  
+
+</table>
 
 
-<script src="test.js"></script>
 <script src="jquery-3.0.0.min.js"></script>
+<script src="contact-api.js"></script>
+<script src="test.js"></script>
 
-
-  </body>
+</body>
+</html>
